--- a/docs/faststore/components/atoms/checkbox.mdx
+++ b/docs/faststore/components/atoms/checkbox.mdx
@@ -146,7 +146,7 @@ export default function CheckboxChecked() {
   />
   <TokenRow
     token="--fs-checkbox-checked-border-color-hover"
-    value="var((--fs-border-color-hover)"
+    value="var(--fs-border-color-hover)"
     isColor
   />
   <TokenRow
