--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -12,7 +12,13 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/Badge___bcedffeb307527c1606be224a7fb5ac1.png
 ---
 
-## Overview
+[Code source](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Badge)
+
+The `Badge` component is used to emphasize an item's state by displaying concise, non-interactive labels. Typical use cases include:
+
+- Highlighting promotional discounts
+- Indicating product features (e.g., `vegan` or `cruelty-free`).
+- Displaying availability statuses (e.g., `NEW`, `ONLY 1 LEFT`, and `OUT OF STOCK`).
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -23,8 +29,6 @@ sidebar_custom_props:
       <Badge variant="neutral" size="big">
         Neutral & Big
       </Badge>
-    </OverviewSection>
-    <OverviewSection>
       <Badge variant="success">Success</Badge>
       <Badge variant="warning">Warning</Badge>
       <Badge variant="danger">Danger</Badge>
@@ -33,122 +37,60 @@ sidebar_custom_props:
   <Tab>
   
     ```tsx
-    <Badge variant="neutral">Neutral</Badge>
-    <Badge variant="info">Info</Badge>
-    <Badge variant="highlighted">Highlighted</Badge>
-    <Badge variant="neutral" size="big">
-      Neutral & Big
-    </Badge>
-    ```
+    import React from 'react' 
+    import {Badge} from '@faststore/ui'
 
-    ```tsx
-    <Badge variant="success">Success</Badge>
-    <Badge variant="warning">Warning</Badge>
-    <Badge variant="danger">Danger</Badge>
-    ```
+    export default function BadgeBasicUsage() {
+      return(
+        <div>
+          <Badge variant="neutral">Neutral</Badge>
+          <Badge variant="info">Info</Badge>
+          <Badge variant="highlighted">Highlighted</Badge>
+          <Badge variant="neutral" size="big">
+            Neutral & Big
+          </Badge>
+          <Badge variant="success">Success</Badge>
+          <Badge variant="warning">Warning</Badge>
+          <Badge variant="danger">Danger</Badge>
+        </div>
+      )
+    }
 
+    ```
   </Tab>
 </Tabs>
 
 ---
 
-## Import
+## Usage
 
-Import the component from [@faststore/ui](/../docs/guides/faststore/components-index)
+<Steps>
+
+### 1. Import the component
 
 ```tsx
 import { Badge } from "@faststore/ui";
 ```
 
-### Import styles into your FastStore project
+### 2. Import styles
 
-To apply the styles of this component in your FastStore project, import the following into your stylesheet:
+To apply styles, include the following in your stylesheet:
 
 ```scss
 @import "@faststore/ui/src/components/atoms/Badge/styles.scss";
 ```
 
-Follow the instructions in the [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles) tutorial.
+For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
 
----
-
-## Props
-
-<ComponentPropsSection component="Badge" />
-
----
-
-## Design Tokens
-
-<TokenTable>
-  <TokenRow
-    token="--fs-badge-padding"
-    value="var(--fs-spacing-0) var(--fs-spacing-2)"
-  />
-  <TokenDivider />
-  <TokenRow
-    token="--fs-badge-border-radius"
-    value="var(--fs-border-radius-pill)"
-  />
-  <TokenRow token="--fs-badge-border-width" value="0" />
-  <TokenRow token="--fs-badge-border-style" value="none" />
-  <TokenRow token="--fs-badge-border-color" value="transparent" isColor />
-  <TokenDivider />
-  <TokenRow
-    token="--fs-badge-bkg-color"
-    value="var(--fs-color-neutral-bkg)"
-    isColor
-  />
-  <TokenDivider />
-  <TokenRow
-    token="--fs-badge-text-color"
-    value="var(--fs-color-text)"
-    isColor
-  />
-  <TokenRow token="--fs-badge-text-size" value="var(--fs-text-size-tiny)" />
-  <TokenRow token="--fs-badge-text-weight" value="var(--fs-text-weight-bold)" />
-  <TokenDivider />
-  <TokenRow
-    token="--fs-badge-transition-function"
-    value="var(--fs-transition-function)"
-  />
-  <TokenRow
-    token="--fs-badge-transition-property"
-    value="var(--fs-transition-property)"
-  />
-  <TokenRow
-    token="--fs-badge-transition-timing"
-    value="var(--fs-transition-timing)"
-  />
-</TokenTable>
-
----
-
-## Default usage
-
-<Tabs items={['Example', 'Code']} defaultIndex="0">
-  <Tab>
-    <OverviewSection>
-      <Badge variant="info">New arrival</Badge>
-    </OverviewSection>
-  </Tab>
-  <Tab>
-    ```tsx 
-    import React from 'react' 
-    import {Badge} from '@faststore/ui'
-
-    export default function BadgeBasicUsage() {
-      return <Badge variant="info">New arrival</Badge>
-    }
-    ```
-  </Tab>
-</Tabs>
+</Steps>
 
 ---
 
 ## Examples
 
-### Big
+### Size
+
+#### Big
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
@@ -415,19 +357,55 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ---
 
-## Use Cases
+## Design tokens
 
-Use the Badge component to highlight:
-
-- Promotional discounts.
-- Product features (e.g., `vegan` or `cruelty-free`).
-- Product availability statuses (e.g., `NEW`, `ONLY 1 LEFT` and `OUT OF STOCK`).
+<TokenTable>
+  <TokenRow
+    token="--fs-badge-padding"
+    value="var(--fs-spacing-0) var(--fs-spacing-2)"
+  />
+  <TokenDivider />
+  <TokenRow
+    token="--fs-badge-border-radius"
+    value="var(--fs-border-radius-pill)"
+  />
+  <TokenRow token="--fs-badge-border-width" value="0" />
+  <TokenRow token="--fs-badge-border-style" value="none" />
+  <TokenRow token="--fs-badge-border-color" value="transparent" isColor />
+  <TokenDivider />
+  <TokenRow
+    token="--fs-badge-bkg-color"
+    value="var(--fs-color-neutral-bkg)"
+    isColor
+  />
+  <TokenDivider />
+  <TokenRow
+    token="--fs-badge-text-color"
+    value="var(--fs-color-text)"
+    isColor
+  />
+  <TokenRow token="--fs-badge-text-size" value="var(--fs-text-size-tiny)" />
+  <TokenRow token="--fs-badge-text-weight" value="var(--fs-text-weight-bold)" />
+  <TokenDivider />
+  <TokenRow
+    token="--fs-badge-transition-function"
+    value="var(--fs-transition-function)"
+  />
+  <TokenRow
+    token="--fs-badge-transition-property"
+    value="var(--fs-transition-property)"
+  />
+  <TokenRow
+    token="--fs-badge-transition-timing"
+    value="var(--fs-transition-timing)"
+  />
+</TokenTable>
 
 ---
 
 ## Customization
 
-For further customization, you can use the following data attributes:
+You can target and override Badge styles using the following data attributes:
 
 `data-fs-badge`
 
@@ -437,25 +415,26 @@ For further customization, you can use the following data attributes:
 
 ---
 
-## Best Practices
+## Props
+
+<ComponentPropsSection component="Badge" />
+
+---
+
+## Best practices
 
 ### ✅ Do's
 
 - Place the badge next to or on top of its related item.
 - Be cautious about the badge's positioning, writing, shape, and color to avoid any confusion with components similar in appearance.
+- Ensure sufficient text contrast against the background.
 
 ### ❌ Don'ts
 
 - Don't use long texts in badges. A reasonable character limit is 15.
 - Don't label badges with active verbs.
-- Don't use color alone to convey information. If color is needed to convey meaning, ensure there is a text alternative for that meaning as well.
-- Don't place badges next to buttons. Although badges and buttons are similar in appearance, badges are not interactive and may confuse users if not used in the proper context.
-
----
-
-## Accessibility
-
-- Text elements must have sufficient color contrast against the background.
+- Don't rely on color alone to convey meaning. Ensure there is a text alternative for that meaning as well.
+- Don’t place badges next to buttons, since they are not interactive and could confuse users.
 
 ---
 
