Fix typo + Examples headings

--- a/docs/faststore/components/atoms/checkbox.mdx
+++ b/docs/faststore/components/atoms/checkbox.mdx
@@ -116,9 +116,11 @@ export default function CheckboxBasicUsage() {
   />
 </TokenTable>
 
-### Variants
+---
 
-#### Checked
+## Examples
+
+### Checked
 
 <OverviewSection>
   <Checkbox checked />
@@ -156,7 +158,7 @@ export default function CheckboxChecked() {
   />
 </TokenTable>
 
-#### Disabled
+### Disabled
 
 <OverviewSection>
   <Checkbox disabled readOnly />
@@ -193,7 +195,7 @@ export default function CheckboxDisabled() {
   />
 </TokenTable>
 
-#### Partial
+### Partial
 
 <OverviewSection>
   <Checkbox checked partial />
@@ -243,7 +245,7 @@ For further customization, you can use the following data attributes:
 
 ### ✅ Do's
 
-- Provide a [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label) when using checkbox input. Descriptive labels help users understand the purpose of a form control.
+- Provide a [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label) when using a checkbox input. Descriptive labels help users understand the purpose of a form control.
 
 ---
 
