--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -64,15 +64,13 @@ The `Badge` component is used to emphasize an item's state by displaying concise
 
 ## Usage
 
-<Steps>
-
-### 1. Import the component
+### Import the component
 
 ```tsx
 import { Badge } from "@faststore/ui";
 ```
 
-### 2. Import styles
+### Import styles
 
 To apply styles, include the following in your stylesheet:
 
@@ -81,8 +79,6 @@ To apply styles, include the following in your stylesheet:
 ```
 
 For details, see [Importing FastStore UI component styles](https://developers.vtex.com/docs/guides/faststore/using-themes-importing-ui-components-styles).
-
-</Steps>
 
 ---
 
