--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -388,9 +388,9 @@ For details, see [Importing FastStore UI component styles](https://developers.vt
 
 ---
 
-## Customization
+## Data attributes
 
-You can target and override Badge styles using the following data attributes:
+You can target and override `Badge` styles using the following data attributes:
 
 `data-fs-badge`
 
