--- a/docs/faststore/components/atoms/checkbox.mdx
+++ b/docs/faststore/components/atoms/checkbox.mdx
@@ -5,7 +5,7 @@ components:
   - Checkbox.tsx
 ---
 
-[<i class="fa-brands fa-github"></i> Code source](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Checkbox)
+<i class="fa-brands fa-github"></i> [Code source](https://github.com/vtex/faststore/tree/main/packages/components/src/atoms/Checkbox)
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
